// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSectionHeader should call any custom onCLose that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should call any custom onOpen that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should render a default toggle section header 1`] = `
<div>
  <h2
    aria-expanded="false"
    class="section-header is-interactable"
    tabindex="0"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          aria-expanded="false"
          aria-label="default title"
          class="accordion-icon-wrapper"
          role="button"
          tabindex="-1"
        >
          <span
            class="accordion-icon"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          default title
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </h2>
  <div
    aria-hidden="true"
    class="toggle"
  />
</div>
`;

exports[`ToggleSectionHeader should render an animated toggle section header 1`] = `
<div>
  <h2
    aria-expanded="false"
    class="section-header is-interactable"
    tabindex="0"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          aria-expanded="false"
          aria-label="animated title"
          class="accordion-icon-wrapper"
          role="button"
          tabindex="-1"
        >
          <span
            class="accordion-icon"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          animated title
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </h2>
  <div
    aria-hidden="true"
    class="toggle"
  >
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero"
      style="height:0;overflow:hidden"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an initially open toggle section header 1`] = `
<div>
  <h2
    aria-expanded="true"
    class="section-header is-interactable"
    tabindex="0"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          aria-expanded="true"
          aria-label="initially open title"
          class="accordion-icon-wrapper"
          role="button"
          tabindex="-1"
        >
          <span
            class="accordion-icon is-open"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          initially open title
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </h2>
  <div
    aria-hidden="false"
    class="toggle"
  >
    Test
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an open toggle section header when clicked 1`] = `
<ToggleSectionHeader
  isAnimated={false}
  isInitiallyOpen={false}
  isTransparent={false}
  level={2}
  sectionHeaderAttrs={Object {}}
  title="opens on click title"
>
  <div>
    <SectionHeader
      aria-expanded={true}
      isOpen={true}
      isTransparent={false}
      level={2}
      onClick={[Function]}
      text="opens on click title"
    >
      <h2
        aria-expanded={true}
        className="section-header is-interactable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        <Arrange
          className="title-arrange"
          fill={
            <span
              aria-hidden={true}
              className="title"
            >
              opens on click title
            </span>
          }
          fitStart={
            <div
              aria-expanded={true}
              aria-label="opens on click title"
              className="accordion-icon-wrapper"
              role="button"
              tabIndex="-1"
            >
              <span
                className="accordion-icon is-open"
              />
            </div>
          }
        >
          <div
            className="arrange title-arrange"
          >
            <div
              className="fit"
            >
              <div
                aria-expanded={true}
                aria-label="opens on click title"
                className="accordion-icon-wrapper"
                role="button"
                tabIndex="-1"
              >
                <span
                  className="accordion-icon is-open"
                />
              </div>
            </div>
            <div
              className="fill"
            >
              <span
                aria-hidden={true}
                className="title"
              >
                opens on click title
              </span>
            </div>
            <div
              className="fit"
            />
          </div>
        </Arrange>
      </h2>
    </SectionHeader>
    <Toggle
      isAnimated={false}
      isOpen={true}
    >
      <div
        aria-hidden={false}
        className="toggle"
      >
        opens on click section header
      </div>
    </Toggle>
  </div>
</ToggleSectionHeader>
`;

exports[`ToggleSectionHeader should set sectionHeaderAttrs prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    backgroundColor="red"
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the children prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    test child
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the level prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={1}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;
